Cart top visibility fixed

--- a/online-sunglass-store-app/src/card.css
+++ b/online-sunglass-store-app/src/card.css
@@ -37,3 +37,7 @@ a:hover{
     padding: .2em;
     background-color: black;
 }
+
+.snipcart * {
+    margin:10px;
+}
